app/assets/stylesheets/components/_footer.scss
.footer {
  background-image: #F4F4F4;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 100px;
  padding: 0px 20px;
  color: rgba(0,0,0,0.3);
  margin-top: 10px;
}
.footer-links {
  display: flex;
  align-items: center;
}
.footer-links a {
  color: black;
  opacity: 0.15;
  text-decoration: none;
  font-size: 24px;
  padding: 0px 10px;
}
.footer-links a:hover {
  opacity: 1;
}
.footer .fa-heart {
  color: #D23333;
}

.rwd-line {
  display: block;

}

.email-link {
  color: #3CD3CC;
  margin-bottom: 0.5rem;
  font-family: "Comfortaa", "cursive";
  font-weight: 500;
  line-height: 1.2;
  font-size: 2rem;
}

.email-link:hover {
  text-decoration: none;
  color: #3CD3CC;
}

